# just-in-time

./: .dockerignore  .gitattributes  .gitignore  AGENT-QUICKSTART.md  AGENTS.md  CLAUDE.md  CONTRIBUTOR-QUICKSTART.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  EXAMPLE.md  INSTALL.md  PODMAN.md  README-new.md  README.md  ROADMAP.md  TESTING.md  docker-compose.yml
.github/: copilot-instructions.md
.jit/: config.toml  events.jsonl  gates.json  index.json  invariants.toml  labels.json  rules.toml  templates.toml  worktree.json
cli/: Cargo.toml  README.md
contrib/: README.md
crates/dispatch/: Cargo.toml  README.md  dispatch.toml.example
crates/dispatch/examples/: README.md  bash-orchestrator.sh  integration-patterns.md  simple-orchestrator.py
crates/dispatch/src/: lib.rs
crates/dispatch/tests/: test_dispatch.rs  test_orchestrator.rs
crates/jit/: Cargo.toml  build.rs
crates/jit/proptest-regressions/storage/: claim_coordinator_proptests.txt
crates/jit/src/: agent_config.rs  build_info.rs  cli.rs  commands.rs  config.rs  config_manager.rs  domain.rs  errors.rs  gate_execution.rs  gate_presets.rs  graph.rs  hierarchy_templates.rs  label_validation.rs  labels.rs  lib.rs  main.rs  output.rs  output_macros.rs  schema.rs  schema_auto.rs  search.rs  snapshot.rs  storage.rs  templates.rs  test_utils.rs  type_hierarchy.rs  type_icons.rs  validation.rs  visualization.rs
crates/jit/src/commands/: batch_create.rs  breakdown.rs  bulk_update.rs  claim.rs  dependency.rs  document.rs  events.rs  gate.rs  gate_check.rs  gate_cli_tests.rs  graph.rs  hooks.rs  invariant.rs  issue.rs  item.rs  labels.rs  mod.rs  plan.rs  plan_doc.rs  query.rs  search.rs  serve.rs  snapshot.rs  template.rs  test_helpers.rs  validate.rs  worktree.rs
crates/jit/src/document/: adapter.rs  assets.rs  link_validator.rs  mod.rs  scope.rs
crates/jit/src/document/parser/: html.rs  markdown.rs  mod.rs  xml.rs
crates/jit/src/domain/: item.rs  mod.rs  projection.rs  queries.rs  types.rs
crates/jit/src/gate_presets/: builtin.rs  manager.rs  planning.rs
crates/jit/src/query/: evaluator.rs  lexer.rs  parser.rs
crates/jit/src/query_engine/: error.rs  evaluator.rs  lexer.rs  mod.rs  parser.rs
crates/jit/src/storage/: atomic_write.rs  claim_coordinator.rs  claim_coordinator_proptests.rs  claims_log.rs  control_plane.rs  errors.rs  gate_runs.rs  heartbeat.rs  json.rs  lease.rs  lock.rs  lock_cleanup.rs  memory.rs  mod.rs  path_errors.rs  ruleset_store.rs  temp_cleanup.rs  warnings.rs  worktree_identity.rs  worktree_paths.rs
crates/jit/src/validation/: defaults.rs  desugar.rs  drift.rs  engine.rs  graph.rs  invariants.rs  local.rs  migration.rs  mod.rs  projection.rs  report.rs  rules.rs  serialize.rs
crates/jit/tests/: ai_review_verdict_tests.rs  apply_cli_tests.rs  archive_integrity_tests.rs  batch_create_tests.rs  bracket_breakdown_tests.rs  bracket_coverage_gate_run_test.rs  breakdown_tests.rs  bulk_operations_tests.rs  bulk_update_cli_tests.rs  check_links_tests.rs  claim_integration_tests.rs  cli_warnings_integration_tests.rs  command_alias_tests.rs  config_loading_tests.rs  content_format_dispatch.rs  content_parser_cross_format.rs  cross_substrate_generality_tests.rs  cross_worktree_integration_tests.rs  decision_kind_tests.rs  decision_risk_story_tests.rs  default_rule_parity_tests.rs  dependency_display_tests.rs  doc_archive_tests.rs  doc_show_tests.rs  document_history_tests.rs  domain_queries_tests.rs  effective_rules_tests.rs  error_json_tests.rs  example_rulesets_tests.rs  exit_code_tests.rs  first_guess_residuals_test.rs  full_migration_parity_tests.rs  gate_check_all_lean_response_test.rs  gate_check_history_flat_test.rs  gate_cli_integration_test.rs  gate_key_flag_test.rs  gate_modification_cli_tests.rs  gate_pass_all_test.rs  gate_pass_exit_code_test.rs  gate_pass_skip_at_head_test.rs  (+73 more)
crates/jit/tests/fixtures/steering/: README.md
crates/jit/tests/fixtures/steering/bracket-coverage-gap/: scenario.toml
crates/jit/tests/fixtures/steering/bracket-happy-path/: scenario.toml
crates/jit/tests/fixtures/steering/bracket-plan-rejected/: scenario.toml
crates/jit/tests/fixtures/steering/happy-path-done/: scenario.toml
crates/jit/tests/fixtures/steering/pending-req-quiet/: scenario.toml
crates/jit/tests/fixtures/steering/premature-done/: scenario.toml
crates/jit/tests/fixtures/steering/sloppy-spec-body/: scenario.toml
crates/jit/tests/fixtures/steering/stray-req/: scenario.toml
crates/jit/tests/fixtures/steering/typo-heading/: scenario.toml
crates/server/: Cargo.toml  build.rs
crates/server/src/: embedded.rs  lib.rs  main.rs  routes.rs  sse.rs  watcher.rs
crates/server/tests/: document_api_tests.rs
data/: gates.json  index.json
dev/: authoring-conventions.md  d0b85bff-archive-json-plan.md  docs-audit-plan.md  f766b092-remove-printing-plan.md  index.md
dispatch/: Cargo.toml  README.md
dispatch/src/: lib.rs  main.rs
dispatch/tests/: test_dispatch.rs  test_orchestrator.rs
docker/: Dockerfile.api  Dockerfile.cli  Dockerfile.web  entrypoint.sh  nginx.conf
docs/: README.md  agent-project-initialization-guide.md  agent-validation-design.md  architecture-pitfalls.md  authoring-conventions.md  bulk-operations-plan.md  ci-gate-integration-design.md  cli-and-mcp-strategy.md  clippy-suppressions.md  dependency-vs-labels-clarity.md  design.md  document-graph-implementation-plan.md  document-search-performance.md  document-viewer-implementation-plan.md  documentation-lifecycle-design.md  documentation-lifecycle-strategy.md  example-config.toml  file-locking-design.md  file-locking-usage.md  gate-preview-analysis.md  generic-dag-refactoring.md  generic-hierarchy-model.md  getting-started-complete.md  graph-filtering-architecture.md  index.md  json-output-standardization-plan.md  json-schema-api.md  knowledge-management-vision.md  label-conventions.md  label-enforcement-proposal.md  label-hierarchy-implementation-plan.md  (+18 more)
jit/: Cargo.toml
jit/src/: cli.rs
jit/tests/: harness_demo.rs  integration_test.rs  query_tests.rs  test_cli_consistency.rs  test_no_coordinator.rs
(+2024 files in other folders)
