[package]
name = "jit-dispatch"
version = "0.1.0"
edition = "2021"

[lib]
name = "jit_dispatch"
path = "src/lib.rs"

[[bin]]
name = "jit-dispatch"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.40", features = ["full"] }
toml = "0.8"

[dev-dependencies]
tempfile = { workspace = true }
