[package]
name = "jit-dispatch"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Agent orchestrator for jit issue tracker"

[lib]
name = "jit_dispatch"
path = "src/lib.rs"

[[bin]]
name = "jit-dispatch"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
