[package]
name = "jit"
version = "0.2.0"
edition.workspace = true
license.workspace = true
description = "CLI-first issue tracker with dependency graphs and quality gates"

[lib]
name = "jit"
path = "src/lib.rs"

[[bin]]
name = "jit"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
fs4 = { version = "0.13", features = ["sync"] }
git2 = "0.18"
which = "6.0"
similar = "2.6"
regex = "1.12.2"
toml = "0.8"
sha2 = "0.10"

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
proptest = { workspace = true }
