[package]
name = "jit"
version = "0.2.1"
edition.workspace = true
license.workspace = true
description = "CLI-first issue tracker with dependency graphs and quality gates"
default-run = "jit"

[lib]
name = "jit"
path = "src/lib.rs"

[[bin]]
name = "jit"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
fs4 = { version = "0.13", features = ["sync"] }
git2 = "0.18"
which = "6.0"
similar = "2.6"
regex = "1.12.2"
toml = "0.8"
toml_edit = "0.22"
sha2 = "0.10"
tar = "0.4"
pulldown-cmark = { workspace = true }
ureq = { version = "3", features = ["native-tls"] }
tempfile = { workspace = true }
dirs = "5.0"
nix = { version = "0.31.1", features = ["signal"] }
# Optional content-parser backends. Each is gated by its own feature and is OFF
# in the default build (see `[features]`), so the default `cargo build` neither
# compiles the parser modules nor pulls these crates.
tl = { version = "0.7", optional = true }
quick-xml = { version = "0.40", optional = true }

[features]
# HTML content parser (document/parser/html.rs). Pulls the pure-Rust `tl` HTML
# parser. OFF by default.
html = ["dep:tl"]
# XML content parser (document/parser/xml.rs). Pulls the `quick-xml` reader.
# OFF by default.
xml = ["dep:quick-xml"]

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
proptest = { workspace = true }
ulid = { workspace = true }
