[package]
name = "jit-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "REST API server for JIT issue tracker"

[lib]
name = "jit_server"
path = "src/lib.rs"

[[bin]]
name = "jit-server"
path = "src/main.rs"

[dependencies]
jit = { path = "../jit" }
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
notify = "7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
git2 = "0.18"

[dev-dependencies]
axum-test = "14.0"
tempfile = "3.8"
